Version 1.0.3~dev

	* Port the sjconf plugin to Python3

Version 1.0.2 Released on 2016/07/25

	* Fix compatibility with newer webengine-spv, closes SLASH-3860

Version 1.0.1 Released on 2016/02/29

	* Make the project compatible with newer automake versions
	* Fix the url example in the sjconf-spvd man page

Version 1.0.0 Released on 2012/07/11

	* Handle remote service returning empty/mal-formed dict, closes: #5612.
	* Modernize autoconf a bit.
	* Split BasePlugin into a query specific class and a mainloop
	  handling class.
	* Fix required/optional plugin parameter loading.
	* Update sample plugins API usage.
	* Allow importer based plugins to modify User-Agent.
	* Do not join worker threads since python lies about the daemon feature.
	* Add spvd/X.Y.Z to default User-Agent.

Version 0.8.11 Released on 2011/08/25

	* BaseJob: do not shadow a plugin's own TypeError.

Version 0.8.10 Released on 2011/05/05

	* Added a README.rst.
	* Fix typo in baseplugin.

Version 0.8.9 Released on 2011/04/27

	* Removed tools/gis2spv.py.
	* spvd is now released under the LGPL-2.1.

Version 0.8.8 Released on 2011/04/12

	* More debugging output.

Version 0.8.7 Released on 2011/03/23

	* Add more debugging output.
	* Rename threads of the ThreadPool per plugin for easier log reading.
	* Do not wait on the first loop of the plugin.

Version 0.8.6 Released on 2011/03/18

	* Always try to commit results, closes: #3759.

Version 0.8.5 Released on 2011/01/13

	* Set default check_poll to 60, closes: #3336.
	* New fix for race condition causing duplicate
	  logging output, closes: #3202.
	* Reduce verbosity for exceptions derived from BaseJobRuntimeError,
	  refs: #3415.
	* Add BaseJob.BaseError to reduce verbosity of derived exceptions,
	  closes: #3415.
	* Deprecate set_check_status and except checks to return their status.
	* Try to import python2.6's LoggerAdapter before the one from sjutils.
	* Make BaseJob derive from new style python objects.